@@ -26,7 +26,6 @@
 module storage {
 
     interface [
-        LegacyDefaultOptionalArguments,
         Conditional=INDEXED_DATABASE
     ] IDBObjectStore {
         readonly attribute [ConvertNullStringTo=Null] DOMString name;
