@@ -1,3 +1,13 @@
+2011-06-21  Mark Pilgrim  <pilgrim@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        IndexedDB: IDBObjectStore methods should throw TypeError if required arguments are missing
+        https://bugs.webkit.org/show_bug.cgi?id=63087
+
+        * storage/indexeddb/objectStore-required-arguments-expected.txt: Added.
+        * storage/indexeddb/objectStore-required-arguments.html: Added.
+
 2011-06-21  Wyatt Carss  <wcarss@chromium.org>
 
         Reviewed by Ryosuke Niwa.
